# src/kitaru/server/adapters/rest/mapping/secrets.py
@@ -81,6 +81,7 @@ def secret_list_params_to_filter(params: SecretListParams) -> SecretFilter:
     """
     return SecretFilter(
         name=params.name,
-        page=params.page,
-        page_size=params.page_size,
+        cursor=params.cursor,
+        size=params.size,
+        sort=params.sort,
     )
